# abb2apk

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  installer.iss  test_installer.ps1
include/: aab_converter.h  config.h  file_utils.h  process_runner.h  signing.h
src/: aab_converter.cpp  config.cpp  file_utils.cpp  main.cpp  process_runner.cpp  signing.cpp
